# preguteca

./: .gitignore  README.md  deploy.sh  poetry-requirements.txt  pyproject.toml  requirements.txt
preguteca_backend/: README.md  channel_info_list.json  manage.py  passenger_wsgi.py  passengers_wsgi.py  pyproject.toml  question_library_data.json  requirements.txt  test.py  video_data__parsed.xlsx
preguteca_backend/preguteca_backend/: asgi.py  settings.py  urls.py  wsgi.py
preguteca_backend/question_library/: admin.py  apps.py  models.py  serializers.py  tests.py  types.py  urls.py  views.py
preguteca_backend/question_library/data/: CB.numbers  CB.xlsx  fill_video_id_and_title.py  parse_video_data.py  video_data.csv  video_data.xlsx  video_data__parsed.json  video_data__parsed.xlsx
preguteca_backend/question_library/migrations/: 0001_initial.py  0002_alter_category_options_videoentry.py  0003_alter_videoentry_options.py  0004_comment_author.py  0005_alter_comment_text_content_and_more.py  0006_category_full_name_alter_category_name.py  0007_alter_category_options_remove_videoentry_link_and_more.py  0008_videoentry_youtube_id.py  0009_remove_videoentry_youtube_id.py  0010_alter_videoentry_title.py  0011_remove_videoentry_category_videoentry_category.py  0012_remove_videoentry_category_category_video_entries.py  0013_alter_category_video_entries.py  0014_videotype_videoentry_language_videoentry_youtube_id_and_more.py  0015_auto_20230524_0101.py  0015_remove_videoentry_url_videoentry_video_url_and_more.py  0016_alter_videoentry_youtube_id.py  0016_alter_videoentry_yt_publish_time.py  0017_auto_20230525_2252.py  0017_remove_videoentry_url_and_more.py  0018_auto_20230528_1135.py  0018_videoentry_yt_duration_and_more.py  0019_alter_videoentry_title_alter_videoentry_url.py  0019_rename_yt_duration_videoentry_duration_and_more.py  0020_rename_url_videoentry_video_url.py  0020_videoentry_thumbnail_url_and_more.py  0021_alter_videoentry_title.py  0021_videoentry_visible_alter_videoentry_yt_publish_time.py  0022_alter_videoentry_yt_publish_time.py  0022_videoentry_yt_channel_title_and_more.py  0023_videoentry_video_embed_url_and_more.py  0024_alter_videoentry_thumbnail_url_and_more.py  0025_videoentry_author_alter_videoentry_yt_publish_time.py  0026_alter_videoentry_video_embed_url_and_more.py  0027_alter_videoentry_questions_and_more.py  0028_alter_videoentry_yt_publish_time.py  0029_category_description_and_more.py  0030_auto_20231010_1658.py  0031_category_keywords_alter_category_description_and_more.py  0032_alter_videoentry_yt_publish_time.py  (+26 more)
preguteca_backend/question_library/templatetags/: render_vite_bundle.py
preguteca_backend/question_library/utils/: __init__.py  common.py  youtube.py
(+56 files in other folders)
