[tool.poetry]
name = "preguteca"
version = "0.1.0"
description = ""
authors = ["Marius Menault <mouarius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2"
pymysql = "^1.1.0"
environ = "^1.0"
django-environ = "^0.11.2"
django-rest-framework = "^0.1.0"
django-cors-headers = "^4.3.1"
unidecode = "^1.3.7"
djangorestframework-camel-case = "^1.4.2"
django-browser-reload = "^1.12.1"
google-api-python-client = "^2.109.0"
django-tinymce = "^3.6.1"
python-lsp-server = "^1.10.0"
django-types = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
