[tool.poetry]
name = "preguteca-backend"
version = "0.1.0"
description = ""
authors = ["Marius Menault <mouarius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.4"
pymysql = "^1.1.0"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
unidecode = "^1.3.6"
pandas = "^2.0.3"
requests = "^2.31.0"
google-api-python-client = "^2.97.0"
djangorestframework-camel-case = "^1.4.2"
django-browser-reload = "^1.11.0"
black = "^23.10.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "preguteca_backend.settings"
